Release Notes
=============


==== Jena 2.6.2

+ Resource.addLiteral() now has an overload that takes a Literal object
  and uses it as the statement object unaltered. (Previously such a Literal
  would be treated as an Object and converted to a String literal, oops).
  Similarly model.addLiteral() has a Literal overloading.

+ N3 pretty writer now write Turtle (no use of "=" for owl:sameAs) 

+ Maven-style codebase layout.

+ Update to iri.jar (version 0.7). 

+ Change the way URIs are split into namespace and 
  local part so as to not split %-encoded sequences.

Reasoners:
   o Fixed problems with pure forward rules generating functor values (fixed
     looping behaviour, fixed selective filtering of functors).
   o Generalized rule reasoner to permit triples in subject position at
     Graph level. Returned InfGraph and deductions graphs are safe but
     getRawGraph on deductions graph will return generalized graph.
   o Fixed handling of unbound groups in regex.

Core API:
   o Fixed bug in comparison of dateTimes with fractional seconds and with 
     round-tripping from calendars
        
ARQ: removed from Jena development
  The following jars have been removed from the lib/ directory - they are only used by ARQ:
  arq.jar, arq-extra.jar, lucene-core-2.3.1.jar, json.jar, stax-api-1.0.jar, wstx-asl-3.0.0.jar 

(Jena 2.6.1 is an internal tag, not a release) 

==== Jena 2.6.0

** Codebase converted to Java 5

   o Convert to use SLF4J for logging facade 

   o Exceptions AlreadyExistsException, DoesNotExistException and
     RulesetNotFoundException no longer inherit via RDFRDBException

Jar changes:
   o Removed antlr-2.7.5.jar (no longer used)
   o Removed concurrent.jar (no longer used)
   o Removed xml-apis.jar (no longer used)
   o Removed commons-logging-1.1.1.jar
   o Add slf4j-api-1.5.6.jar, slf4j-log4j12.jar 
   o junit.jar upgraded to junit-4.5.jar

Deprecation clearance.